--- a/site_project/site_app/templates/site_app/base.html
+++ b/site_project/site_app/templates/site_app/base.html
@@ -9,7 +9,7 @@
     <!-- Bootstrap, иконки и шрифт -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link href='http://fonts.googleapis.com/css?family=Roboto:400,100,100italic,300,300italic,400italic,500,500italic,700,700italic,900italic,900' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" type="text/css" href="{% static 'site/site.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'site_app/site.css' %}">
     <link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel='stylesheet'>
 
     {% if title %}
@@ -22,19 +22,42 @@
 <header class="site-header">
     <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
         <div class="container">
-            <a class="navbar-brand mr-4" href="{% url 'site-home' %}"><i class='bx bxs-cat bx-tada-hover'></i> Распознаватель котиков</a>
+            {% if user.is_authenticated %}
+                <a class="navbar-brand mr-4" href="{% url 'site-home' %}"><i class='bx bxs-cat bx-tada-hover'></i>Распознаватель котиков</a>
+            {% else %}
+                <a class="navbar-brand mr-4" href="{% url 'register' %}"><i class='bx bxs-cat bx-tada-hover'></i>Распознаватель котиков</a>
+            {% endif %}
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggle" aria-controls="navbarToggle" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarToggle">
+                <!-- Левая часть навигационной панели -->
                 <div class="navbar-nav mr-auto">
-                    <a class="nav-item nav-link " href="{% url 'site-home' %}">Главная</a>
+                    {% if user.is_authenticated %}
+                        <a class="nav-item nav-link " href="{% url 'site-home' %}">Главная</a>
+                    {% else %}
+                        <a class="nav-item nav-link " href="{% url 'register' %}">Главная</a>
+                    {% endif %}
+
                     <a class="nav-item nav-link" href="{% url 'site-about' %}">Обо мне</a>
+
+                    {% if user.is_authenticated %}
+                        <a class="nav-item nav-link" href="{% url 'user-posts' user.username %}">Мои посты</a>
+                    {% endif %}
                 </div>
                 <!-- Правая часть навигационной панели -->
                 <div class="navbar-nav">
-                    <a class="nav-item nav-link" href="#">Вход</a>
-                    <a class="nav-item nav-link" href="#">Регистрация</a>
+                    {% if user.is_authenticated %}
+                    <a class="nav-item nav-link" href="{% url 'post-create' %}">Новая запись</a>
+                    <a class="nav-item nav-link" href="{% url 'profile' %}">Профиль</a>
+                    <form id="logout-form" class="form_button" action="{% url 'logout' %}" method="POST">
+                        {% csrf_token %}
+                        <button class="button" type="submit">Выход</button>
+                    </form>
+                    {% else %}
+                    <a class="nav-item nav-link" href="{% url 'login' %}">Вход</a>
+                    <a class="nav-item nav-link" href="{% url 'register' %}">Регистрация</a>
+                    {% endif %}
                 </div>
             </div>
         </div>
@@ -46,15 +69,14 @@
             {% block content %}{% endblock %}
         </div>
     </div>
-
 </main>
 
 <footer class="text-center bg-dark">
     <p><a href="{% url 'site-home' %}">© Павлов Павел</a></p>
 </footer>
 
-<!-- Дополнительные скрипты JavaScript -->
-<!-- Сначала jQuery, затем Popper.js, последним Bootstrap JS -->
+<!-- JavaScript -->
+<!-- jQuery, Popper.js, Bootstrap JS -->
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
