--- a/site_project/user_app/templates/user_app/login.html
+++ b/site_project/user_app/templates/user_app/login.html
@@ -1,20 +1,20 @@
-{% extends "blog/base.html" %}
+{% extends "site_app/base.html" %}
 {% load crispy_forms_tags %}
 {% block content %}
 <div class="content-section">
     <form method="POST">
         {% csrf_token %}
         <fieldset class="form-group">
-            <legend class="border-bottom mb-4">Добро пожаловать в клуб Python Bytes</legend>
+            <legend class="border-bottom mb-4">Вход</legend>
             {{ form|crispy }}
         </fieldset>
         <div class="form-group">
-            <button class="btn btn-outline-info" type="submit">Регистрация</button>
+            <button class="btn btn-outline-info" type="submit">Войти</button>
         </div>
     </form>
     <div class="border-top pt-3">
         <small class="text-muted">
-            Уже есть аккаунт? <a class="ml-2" href="#">Вход</a>
+            Нужен аккаунт? <a class="ml-2" href="{% url 'register' %}">Регистрация</a>
         </small>
     </div>
 </div>
