--- a/site_project/site_app/templates/site_app/home.html
+++ b/site_project/site_app/templates/site_app/home.html
@@ -1,47 +1,9 @@
 {% extends "site_app/base.html" %}
 {% block content %}
-{% for post in posts %}
-<article class="media content-section">
-    <img class="rounded-circle article-img" src="{{ post.author.profile.image.url }}" alt="">
-    <div class="media-body">
-        <div class="article-metadata">
-            <div class="article-author">
-                <a class="mr-2" href="#" style="color: darkorchid;">{{ post.author }}</a>
-            </div>
-            <div class="article-date_posted">
-                <small>'{{ post.date_posted|date:"F d, Y" }}</small>
-            </div>
-        </div>
-        <a class="article-title" href="{% url 'post-detail' post.id %}">
-            <h2>{{ post.title }}</h2>
-            <img class="post-img" src="{{ post.upload_image.url }}" alt=""/>
-            {% if post.recognize_image %}
-                <img class="post-img" src="{{ post.recognize_image.url }}" alt=""/>
-            {% endif %}
-            <p class="article-content">{{ post.content }}</p>
-        </a>
-    </div>
-</article>
-{% endfor %}
-<div class="pagination justify-content-center">
-    {% if is_paginated %}
-        {% if page_obj.has_previous %}
-            <a class="btn btn-outline-info mb-4 mr-1" href="?page=1">Первая</a>
-            <a class="btn btn-outline-info mb-4 mr-1" href="?page={{ page_obj.previous_page_number }}">Предыдущая</a>
-        {% endif %}
-
-        {% for num in page_obj.paginator.page_range %}
-            {% if page_obj.number == num %}
-                <a class="btn btn-info mb-4 mr-1" href="?page={{ num }}">{{ num }}</a>
-            {% elif num > page_obj.number|add:'-3' and num < page_obj.number|add:'3' %}
-                <a class="btn btn-outline-info mb-4 mr-1" href="?page={{ num }}">{{ num }}</a>
-            {% endif %}
-        {% endfor %}
-
-        {% if page_obj.has_next %}
-            <a class="btn btn-outline-info mb-4 mr-1" href="?page={{ page_obj.next_page_number }}">Следующая</a>
-            <a class="btn btn-outline-info mb-4 mr-1" href="?page={{ page_obj.paginator.num_pages }}">Последняя</a>
-        {% endif %}
-    {% endif %}
-</div>
+<h2>Котознайка разработан Павловым Павлом в период с 21.08.2024 по 25.06.2024</h2>
+{% if user.is_authenticated %}
+    <a href="{% url 'site-home' %}">Дашбород</a>
+{% else %}
+    <a href="{% url 'register' %}">Дашбород</a>
+{% endif %}
 {% endblock content %}
