--- a/site_project/site_app/templates/site_app/post_detail.html
+++ b/site_project/site_app/templates/site_app/post_detail.html
@@ -14,7 +14,9 @@
                 {% endif %}
             </div>
             <h2 class="article-title">{{ object.title }}</h2>
-            <img class="post-detail-img" src="{{ object.upload_image.url }}" alt="">
+            {% if object.upload_image %}
+                <img class="post-detail-img" src="{{ object.upload_image.url }}" alt="">
+            {% endif %}
             {% if object.recognize_image %}
                 <img class="post-detail-img" src="{{ object.recognize_image.url }}" alt="">
             {% endif %}
